Bug 424380 - Specifying --output does nothing
Summary: Specifying --output does nothing
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 20.07.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
: 425400 425641 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-18 18:33 UTC by Magnus Boman
Modified: 2020-11-10 21:12 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Magnus Boman 2020-07-18 18:33:16 UTC
Since updating Spectacle 20.04.3 -> 20.07.80 I noticed my scripts stopped working and --output is being completely ignored and they end up in ~/Pictures.


STEPS TO REPRODUCE
1. Install Spectacle 20.07.80
2. Run `spectacle --background --output test.png`
3. Find ~/Pictures/Screenshot_*.png instead

OBSERVED RESULT
The --output flag is completely ignored

EXPECTED RESULT
The --output flag to work as described

SOFTWARE/OS VERSIONS
Linux: 5.7.9-zen1-1-zen
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
N/A
Comment 1 Nazar Kalinowski 2020-07-19 06:34:08 UTC
Can reproduce.
It looks like dec0e6cef23ac35754aa537db6d7ace42b23ca2a is the commit that introduces the bug.
Comment 2 Bug Janitor Service 2020-07-19 09:21:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/11
Comment 3 Méven Car 2020-07-20 10:10:13 UTC
Git commit 7f88fcb4bb4085f39b7330212efacb19c2b5bcad by Méven Car, on behalf of Nazar Kalinowski.
Committed on 20/07/2020 at 10:09.
Pushed by meven into branch 'master'.

Fix wrong file name when --output option is used

M  +7    -9    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/7f88fcb4bb4085f39b7330212efacb19c2b5bcad
Comment 4 tlemaillet 2020-08-31 17:13:37 UTC
*** Bug 425400 has been marked as a duplicate of this bug. ***
Comment 5 duchuy29092000 2020-09-07 08:45:21 UTC
*** Bug 425641 has been marked as a duplicate of this bug. ***
Comment 6 Magnus Boman 2020-11-10 16:07:27 UTC
As I commented on #428113, this is still not included in a release. Are users supposed to have to use git master for the rest of their lives just to use some basic scripting functionality?
Comment 7 Nate Graham 2020-11-10 16:37:18 UTC
The next version (20.12) is scheduled to be released on December 10th, so I hope our users live for more than a month
Comment 8 Magnus Boman 2020-11-10 19:56:15 UTC
(In reply to Nate Graham from comment #7)
> The next version (20.12) is scheduled to be released on December 10th, so I
> hope our users live for more than a month

I very much hope this fix will be included by then, at that point it will have been 4 months of this bug being present but actively ignored.
Comment 9 Nate Graham 2020-11-10 20:37:00 UTC
Just a minor correction: this bug was fixed two days after you reported it, which is extraordinarily fast and hardly "4 months of this bug being present but actively ignored". I understand that it's annoying for the problem to still be manifesting on your system. But a time lag between the fix being made in the code and the fix reaching you personally is simply a part of software with discrete releases. Your patience is appreciated. :)
Comment 10 Magnus Boman 2020-11-10 21:01:52 UTC
(In reply to Nate Graham from comment #9)
> Just a minor correction: this bug was fixed two days after you reported it,
> which is extraordinarily fast and hardly "4 months of this bug being present
> but actively ignored". I understand that it's annoying for the problem to
> still be manifesting on your system. But a time lag between the fix being
> made in the code and the fix reaching you personally is simply a part of
> software with discrete releases. Your patience is appreciated. :)

I understand 2 days is very fast, the part that gets to me is that the simple fix was never added in the several releases since then.

Anyway sorry for venting about this, but seeing countless duplicates closed and ignored just really got to me.
Comment 11 Nate Graham 2020-11-10 21:12:20 UTC
You can always ask the packagers of your distro to backport the fix if you feel like our release cycle isn't fast enough for you. The Arch packagers are usually quite responsive and open to this kind of thing.