Fix wrong file name when --output option is used

BUG: 424380